Se creó con Colab

--- a/AprendizajeNoSupervisado.ipynb
+++ b/AprendizajeNoSupervisado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnvyEBvaHQ9xc93obyNp2y",
+      "authorship_tag": "ABX9TyPtD4Ww67XGj8jti8AHmtfp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "### ¿Qué es el Aprendizaje No Supervisado?\n",
         "\n",
-        "El **aprendizaje no supervisado** es fundamentalmente diferente. Su objetivo principal es encontrar patrones, estructuras y relaciones ocultas en los datos **sin la necesidad de etiquetas o respuestas predefinidas**. Es como darle a un niño un conjunto de juguetes sin decirle cómo se llaman o cómo agruparlos, y esperar que el niño descubra similitudes y los organice por sí mismo.\n",
+        "El objetivo principal es encontrar patrones, estructuras y relaciones ocultas en los datos **sin la necesidad de etiquetas o respuestas predefinidas**. Es como darle a un niño un conjunto de juguetes sin decirle cómo se llaman o cómo agruparlos, y esperar que el niño descubra similitudes y los organice por sí mismo.\n",
         "\n",
         "Como dijo el científico de la computación Yann LeCun: *\"si la inteligencia fuera un pastel, el aprendizaje no supervisado sería el pastel, el aprendizaje supervisado sería el glaseado del pastel, y el aprendizaje por refuerzo sería la cereza del pastel.\"* Esta analogía subraya la creencia de que el aprendizaje no supervisado es la base más grande y con mayor potencial para la inteligencia artificial. La vasta mayoría de los datos disponibles en el mundo real no están etiquetados, y el aprendizaje no supervisado nos permite extraer valor de esta inmensa cantidad de información.\n",
         "\n",
@@ -56,14 +56,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "Tc_ZUczf0K3k",
-        "outputId": "3da25d84-8309-41c6-bca8-682a8c827505"
+        "outputId": "744b2ad2-09e8-4e8b-d683-3461ffd67617"
       },
       "outputs": [
         {
@@ -146,7 +146,7 @@
       "source": [
         "\n",
         "2.  **Reducción de Dimensiones:**\n",
-        "    * **Propósito:** Como vimos en la Clase 1, reducir el número de características de un dataset, manteniendo la información más importante.\n",
+        "    * **Propósito:** Reducir el número de características de un dataset, manteniendo la información más importante.\n",
         "    * **Ejemplos:**\n",
         "        * Compresión de datos: Reducir el tamaño de los archivos sin perder información crítica.\n",
         "        * Visualización: Proyectar datos de alta dimensión a 2D o 3D para facilitar el análisis visual.\n",
@@ -337,9 +337,9 @@
           "height": 1000
         },
         "id": "ShLy2ig51vbX",
-        "outputId": "3018fc2c-c7fe-4b67-a374-41f78373f91c"
+        "outputId": "a4da9c70-3d4c-43d5-bbbe-15941650fde1"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -381,7 +381,7 @@
         "\n",
         "4.  **Minado de Reglas de Asociación:**\n",
         "    * **Propósito:** Descubrir relaciones y co-ocurrencias frecuentes entre variables en grandes bases de datos.\n",
-        "    * **Ejemplo:** En el análisis de cesta de la compra, encontrar reglas como \"los clientes que compran pan y leche, también tienden a comprar mantequilla\".\n"
+        "    * **Ejemplo:** En el análisis de cesta de la compra, encontrar reglas como \"los clientes que compran pan y leche, también tienden a comprar manteca\".\n"
       ],
       "metadata": {
         "id": "0rtEQ4471vsX"
