Se creó con Colab

--- a/Ejercicios.ipynb
+++ b/Ejercicios.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORYKTTs9KpFL+ma5UDGFkI",
+      "authorship_tag": "ABX9TyPepnV2n9D5dzK1t86VRpSW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "import matplotlib.pyplot as plt\n",
         "from mpl_toolkits.mplot3d import Axes3D # Para visualización 3D\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.decomposition import PCA, NMF # NMF ya no se usará en este ejercicio, pero lo dejo por si el contexto anterior lo requería.\n",
+        "from sklearn.decomposition import PCA\n",
         "from sklearn.cluster import KMeans\n",
         "from sklearn.metrics import silhouette_score, adjusted_rand_score\n",
         "from sklearn.datasets import load_breast_cancer, load_wine, load_digits, make_blobs\n",
@@ -51,7 +51,7 @@
         "id": "zTIUcrVdHXdo",
         "outputId": "f656ebe7-e0cd-4a0e-d244-031296ab2129"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +92,7 @@
         "id": "7FCotiVfUPzK",
         "outputId": "0cb556df-6ea0-4ed6-d7a1-f20c6f99bc80"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "id": "xH9Q9spqHiis",
         "outputId": "64bddd98-2136-462e-caf8-7a773008d9a3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
         "id": "8JZ_fBjdHlXT",
         "outputId": "e38e9eae-7712-4984-9257-65e854ab2258"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
         "id": "l6vwIF3OHsDq",
         "outputId": "09248b48-2566-4b36-f2d3-b0634197d448"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -251,7 +251,7 @@
         "id": "QsM48UOobZir",
         "outputId": "20d941e3-38b8-4d83-e655-1a3ee9562c3c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
         "id": "jAdCdHj2IfWR",
         "outputId": "887aead8-97e3-403a-bb8b-43b6800eadaa"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "id": "EdJAqMqOIjRf",
         "outputId": "286d7b49-4c95-49ce-ec55-d435b700a59b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         "id": "QOWE5ICdIsYT",
         "outputId": "3d684278-a97f-4f71-c928-17b9c7e2d957"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -413,7 +413,7 @@
         "id": "HjL4wG_HI0ZQ",
         "outputId": "e7246312-578e-4211-8abe-88c3bf889b7f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -476,7 +476,7 @@
         "id": "79QmesgLI7gj",
         "outputId": "b4a0a7fe-2e84-4daf-d298-cbeac6425620"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,7 +540,7 @@
         "id": "-AANjo8vcIcj",
         "outputId": "bd0ee7dc-02f2-43fc-8909-99ac087bd62a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +570,7 @@
         "id": "WAn_oDvmJX90",
         "outputId": "36034c8a-77d0-4c72-801d-1abd2604fbda"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +640,7 @@
         "id": "VG4DMSm-Ja4c",
         "outputId": "7174fde2-e580-4da9-b15a-d8ab1cc0cc8e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
         "id": "qUJ7lNhRJszA",
         "outputId": "4d96c221-9f29-4ba8-ea18-17d5a1c8b601"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +734,7 @@
         "id": "ZOXUvUEOJ1vA",
         "outputId": "a66f3db9-cce4-4ab1-e6db-9da6258b712d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -763,7 +763,7 @@
         "id": "2YZU0xJ2J4Nh",
         "outputId": "d2d7f164-e2b4-4aca-a246-0b0857ee4009"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,7 +816,7 @@
         "id": "Ka-EPzy5K4uL",
         "outputId": "8b9393c6-52f8-43e8-9168-b1fd1ec67b52"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +846,7 @@
         "id": "JfhFMwjqcUUX",
         "outputId": "5e3d66cd-c3c3-428c-e6ec-e0c282452c63"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +913,7 @@
         "id": "kDLHxXWZK_C_",
         "outputId": "723fdba5-11f1-4f37-f5ae-047e3f4793e2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,7 +957,7 @@
         "id": "-p2YoFl-LD3K",
         "outputId": "cb703457-4905-4d46-9a61-9191c4acfe6d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -997,7 +997,7 @@
         "id": "K0Mwm4TTLGs7",
         "outputId": "37483964-f888-40a9-adbc-412ffb5f4284"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1025,7 +1025,7 @@
         "id": "vz20gakNLJ6V",
         "outputId": "e9ffd817-eba7-4620-ed2f-5d5f5b423c83"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,7 +1077,7 @@
         "id": "wDGDfAWfUfTK",
         "outputId": "b3b6c835-b49d-46ba-dfa1-a03fd4e30499"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,7 +1103,7 @@
         "id": "qJtU2HWgW1Iu",
         "outputId": "3cc9e5bd-5af3-4b92-840e-ac3f2107f5a0"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1428,7 +1428,7 @@
         "id": "96_uqMuzZiCq",
         "outputId": "62bb75ab-630f-44ce-b60d-9cb102fef127"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1458,7 +1458,7 @@
         "id": "zJWoTPrdLnC3",
         "outputId": "0b9e4cd4-9869-4e96-e789-4515f54f6846"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1525,7 +1525,7 @@
         "id": "luqN-EtDMF6e",
         "outputId": "5e5275d7-a7ac-4b4a-854d-1621dcde64c3"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1572,7 +1572,7 @@
         "id": "hO0mxdW4MqUg",
         "outputId": "c60e427b-1469-4be1-eb85-59e15c31ddfc"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1613,7 +1613,7 @@
         "id": "zF5HLfzMMvBD",
         "outputId": "60f976f2-ac24-4a16-a2ad-c70d49de3aba"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
