Se creó con Colab

--- a/Ejercicios.ipynb
+++ b/Ejercicios.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPepnV2n9D5dzK1t86VRpSW",
+      "authorship_tag": "ABX9TyM+8lnT59Td7M/4NOk2YcvW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,9 +49,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zTIUcrVdHXdo",
-        "outputId": "f656ebe7-e0cd-4a0e-d244-031296ab2129"
+        "outputId": "5a57265b-efd8-4789-a5eb-e68449c95130"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +440,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 6. Visualización 3D de PCA (NUEVA ADICIÓN)\n",
+        "# 6. Visualización 3D de PCA\n",
         "if X_pca_full_wine.shape[1] >= 3:\n",
         "    fig = plt.figure(figsize=(10, 8))\n",
         "    ax = fig.add_subplot(111, projection='3d')\n",
